objects/tffa__ProductMatrix__c.object
<CustomObject>
    <description>Represents business rules for filtering products available for applying. Criteria for filtering may be based on the originating channel, branch and even user (by skills).</description>
    <fields>
        <fullName>StateCodeSet__c</fullName>
        <description>Unique code of States servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>State code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCodeSet__c</fullName>
        <description>Unique set of Zip Codes servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Zip code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Unique code of brands servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>The originating channel for the submission. A fact. Supports multiple values.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the product matrix as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCodeSet__c</fullName>
        <description>Unique code of location (branch) servicing the submission. A fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Location code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LocationSegmentSet__c</fullName>
        <description>The location segment of the submission. A fact. Supports multiple values.</description>
        <label>Location segment (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LocationSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationTypeSet__c</fullName>
        <description>Organization type of associated party. Supports multiple values. A fact.</description>
        <label>Organization Type (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary party in the bank - CUSTOMER, PROSPECT.  This is different from applicant role which is specific to an application. A fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Party type of associated party. A fact.</description>
        <label>Party type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The outcome of the rule, an allowed product.</description>
        <label>Product (outcome)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__ChannelSet__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__LocationSegmentSet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__BrandCodeSet__c</columns>
        <columns>StateCodeSet__c</columns>
        <columns>ZipCodeSet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>